@startuml
skinparam handwritten true
skinparam monochrome true
skinparam packageStyle rect
skinparam defaultFontName FG Virgil
skinparam shadowing false


class  CartController <<application>>{
+viewItems(Model model)
+deleteItem(Long id)
+deleteAllItems()
}


class ItemService<<service>>{
+deleteAllItemsByUser(String user)
+deleteItemById(Long id)

}

interface ItemRepository<<repository>>{
+findUserCart(String user)
+findById(Long id)
}





CartController --> ItemService


ItemService --> ItemRepository




@enduml